--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 azureml==0.2.7
 azureml_core==1.40.0
 datasets==2.0.0
+numpy==1.21.2
+onnxruntime==1.11.0
+requests==2.27.1
 torch==1.11.0
 tqdm==4.63.1
 transformers==4.17.0
